# raspberry-pi-motion-detection

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: settings.json
scripts/: benchmark.py  motion-detector.service
src/: __init__.py
src/motion_detector/: __init__.py  cli.py
src/motion_detector/config/: __init__.py  defaults.py  settings.py
src/motion_detector/core/: __init__.py  camera.py  camera_backends.py  detector.py  processor.py
src/motion_detector/utils/: __init__.py  file_manager.py  logger.py  notifier.py  schedule.py  validators.py  video_recorder.py
tests/: conftest.py  test_camera_backends.py  test_config.py  test_file_manager.py  test_logger.py  test_notifier.py  test_processor.py  test_schedule.py  test_validators.py  test_video_recorder.py
