[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/motion_detector"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
# Analyze our own package only; third-party libraries (some of which ship
# stubs requiring a newer Python than we target) are not followed.
files = ["src/motion_detector"]

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "cv2",
    "cv2.*",
    "picamera2",
    "picamera2.*",
    "psutil",
    "psutil.*",
]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true
